# crypto_tracker

./: .dockerignore  .env_sample  .gitignore  Dockerfile  celery_config.py  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 4d52febd9bfa_create_prices_table.py  df913184a264_create_prices_table.py
app/: config.py  database.py  main.py  models.py
app/api_router/: dependencies.py  router.py
app/client/: __init__.py  client.py  repository.py  schemas.py  service.py
app/common/: repositories.py
app/price/: __init__.py  client.py  repository.py  schemas.py  service.py  tasks.py
src/: __init__.py  celery_app.py
