[project]
name = "crypto-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.6.3",
    "fastapi[standard]>=0.136.1",
    "tenacity>=9.1.4",
    "uvicorn>=0.46.0",
]
